crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__dynamodb-scylladb-alternator-federated_tpch_q6_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_q6"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: sum(lineitem.l_extendedprice * lineitem.l_discount) AS revenue                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |   Aggregate: groupBy=[[]], aggr=[[sum(lineitem.l_extendedprice * lineitem.l_discount)]]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |     Projection: lineitem.l_discount, lineitem.l_extendedprice                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |       Filter: lineitem.l_shipdate >= Date32("1994-01-01") AND lineitem.l_shipdate < Date32("1995-01-01")                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|               |         TableScan: lineitem projection=[l_discount, l_extendedprice, l_shipdate], full_filters=[lineitem.l_discount >= Float64(0.049999999999999996), lineitem.l_discount <= Float64(0.06999999999999999), lineitem.l_quantity < Int64(24)]                                                                                                                                                                                                                                                                                                                                                |
| physical_plan | ProjectionExec: expr=[sum(lineitem.l_extendedprice * lineitem.l_discount)@0 as revenue]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |   AggregateExec: mode=Final, gby=[], aggr=[sum(lineitem.l_extendedprice * lineitem.l_discount)]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |     CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |       AggregateExec: mode=Partial, gby=[], aggr=[sum(lineitem.l_extendedprice * lineitem.l_discount)]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |           FilterExec: l_shipdate@2 >= 1994-01-01 AND l_shipdate@2 < 1995-01-01, projection=[l_discount@0, l_extendedprice@1]                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |             RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=8                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |               CooperativeExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |                   DynamoDBTableProviderExec { request_plan: Scan(ScanParams { table_name: "tpch_lineitem", filter_expression: Some("(#l_discount >= :v0) AND (#l_discount <= :v1) AND (#l_quantity < :v2)"), expression_attribute_values: {":v0": N("0.049999999999999996"), ":v1": N("0.06999999999999999"), ":v2": N("24")}, expression_attribute_names: {"#l_discount": "l_discount", "#l_extendedprice": "l_extendedprice", "#l_quantity": "l_quantity", "#l_shipdate": "l_shipdate"}, projection_expression: Some("#l_discount, #l_extendedprice, #l_shipdate"), limit: None }), .. } |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
