crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-compound_hash_index_lineitem_compound_pk_lookup_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: lineitem_compound_pk_lookup"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                          |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: lineitem.l_orderkey = Int64(1) AND lineitem.l_linenumber = Int64(1)                                                                                                                                                                   |
|               |   TableScan: lineitem projection=[l_orderkey, l_partkey, l_suppkey, l_linenumber, l_quantity, l_extendedprice, l_discount, l_tax, l_returnflag, l_linestatus, l_shipdate, l_commitdate, l_receiptdate, l_shipinstruct, l_shipmode, l_comment] |
| physical_plan | FilterExec: l_orderkey@0 = 1 AND l_linenumber@3 = 1                                                                                                                                                                                           |
|               |   SchemaCastScanExec                                                                                                                                                                                                                          |
|               |     BytesProcessedExec                                                                                                                                                                                                                        |
|               |       DataSourceExec: partitions=32, partition_sizes=[23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 22, 22, 22]                                                         |
|               |                                                                                                                                                                                                                                               |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
