crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-compound_hash_index_partsupp_compound_pk_lookup_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: partsupp_compound_pk_lookup"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: partsupp.ps_partkey = Int64(1) AND partsupp.ps_suppkey = Int64(2)                                                                             |
|               |   TableScan: partsupp projection=[ps_partkey, ps_suppkey, ps_availqty, ps_supplycost, ps_comment]                                                     |
| physical_plan | FilterExec: ps_partkey@0 = 1 AND ps_suppkey@1 = 2                                                                                                     |
|               |   SchemaCastScanExec                                                                                                                                  |
|               |     BytesProcessedExec                                                                                                                                |
|               |       DataSourceExec: partitions=32, partition_sizes=[4, 4, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3] |
|               |                                                                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------+
